--- a/debian/desktop/dwm.desktop
+++ b/debian/desktop/dwm.desktop
@@ -4,4 +4,7 @@ Name=Dwm
 Comment=Dynamic window manager
 Exec=dwm
 Icon=dwm
-Type=XSession
+Type=Application
+X-LightDM-DesktopName=dwm
+DesktopNames=dwm
+Keywords=tiling;wm;windowmanager;window;manager;
