--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: dwm
 Section: x11
 Priority: optional
 Maintainer: Hugo Lefeuvre <hle@debian.org>
-Build-Depends: debhelper (>= 11),
+Build-Depends: debhelper-compat (= 13),
                libx11-dev,
                libxinerama-dev,
                libxft-dev,
                libfreetype6-dev,
                dpkg-dev (>= 1.16.1.1)
-Standards-Version: 4.1.5
+Standards-Version: 4.5.0
 Homepage: http://dwm.suckless.org/
 Vcs-Browser: https://salsa.debian.org/hle/dwm
 Vcs-Git: https://salsa.debian.org/hle/dwm.git
